# medotfiles

./: .gitignore  LICENSE  README.md  manage.sh
.config/aurora-shell/: config.json
.config/aurora-shell/templates/cachy-selector/: cachy-selector-template.css  cachy-selector.css
.config/fastfetch/: config.jsonc
.config/hypr/: colors-hyprland-generated.conf  hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  monitors.conf
.config/hypr/C-widgets/controlcenter-remake/: meson.build
.config/hypr/C-widgets/controlcenter-remake/.cache/clangd/index/: audio_manager.c.3661C51DB1ABEDD8.idx  audio_manager.c.3944F2AD6CCA155F.idx  audio_manager.h.8F2DDEE36835F06F.idx  audio_manager.h.F751010602065289.idx  audio_scanner.c.578EA7E732AFA5BC.idx  audio_scanner.h.2682AC2859105959.idx  bluetooth_manager.c.3565F18E152EFE9E.idx  bluetooth_manager.c.CC47AA9DC9A6A3CD.idx  bluetooth_manager.h.B87DC147B84ECE54.idx  bluetooth_manager.h.E4F5E960C9301BC0.idx  bluetooth_scanner.c.42BC9870DB0FEE3C.idx  bluetooth_scanner.c.C116BA6E4398046A.idx  bluetooth_scanner.h.31526957BD2132FF.idx  bluetooth_scanner.h.A3B82784E424396B.idx  brightness_manager.c.76EC9CE140F72654.idx  brightness_manager.c.B494828C2F049D26.idx  brightness_manager.h.6B28E23C2ABEC4FA.idx  brightness_manager.h.F5E1B17341F26719.idx  main.c.9D2DB33D649F9D77.idx  main.c.9F98743F6E265098.idx  network_manager.c.86B2A8FC4EB1AB76.idx  network_manager.c.E28A7EA09D9FA0FB.idx  network_manager.h.2C48DF2E5C9C7946.idx  network_manager.h.9611B77BD9DBA543.idx  password_prompt.c.FDCC2B8EFC1EA84B.idx  password_prompt.h.DFE0152EEE88AD01.idx  system_monitor.c.B3C898A2FE74F872.idx  system_monitor.c.DDB1CD99853549C8.idx  system_monitor.h.27E35203035B60E3.idx  system_monitor.h.9EA1BA56376FE323.idx  utils.c.7962D98750EE31E4.idx  utils.c.E7715AF655C12247.idx  utils.h.4F9E3511D490406C.idx  utils.h.D2C89B89B9D9FBD8.idx  wifi_scanner.c.99C5BDDD803BBB59.idx  wifi_scanner.c.EC9681742DE4D5BC.idx  wifi_scanner.h.7450EACA27234456.idx  wifi_scanner.h.7C21CC952B95EEFD.idx
.config/hypr/C-widgets/controlcenter-remake/src/: audio_manager.c  audio_manager.h  bluetooth_manager.c  bluetooth_manager.h  bluetooth_scanner.c  bluetooth_scanner.h  brightness_manager.c  brightness_manager.h  main.c  network_manager.c  network_manager.h  password_prompt.c  password_prompt.h  style-template.css  style.css  system_monitor.c  system_monitor.h  utils.c  utils.h  wifi_scanner.c  wifi_scanner.h
.config/hypr/C-widgets/hyper-calendar/: meson.build
.config/hypr/C-widgets/hyper-calendar/.cache/clangd/index/: main.c.DFB4409817493F45.idx
.config/hypr/C-widgets/hyper-calendar/data/: events.json  permanent_events.json
.config/hypr/C-widgets/hyper-calendar/src/: main.c  style-template.css  style.css
.config/hypr/C-widgets/schedule-widget/: meson.build
.config/hypr/C-widgets/schedule-widget/.cache/clangd/index/: main.c.FFD2957105BB9D3C.idx
.config/hypr/C-widgets/schedule-widget/data/: com.meismeric.GtkSchedule.gresource.xml  schedule.json  style-template.css  style.css
.config/hypr/C-widgets/schedule-widget/src/: main.c
.config/hypr/C-widgets/side-mpris-player/: config.json  meson.build  output.txt
.config/hypr/C-widgets/side-mpris-player/src/: main.c  mpris.c  mpris.h  style-template.css  style.css  utils.c  utils.h
.config/hypr/C-widgets/sidebar/: meson.build  output.txt
.config/hypr/C-widgets/sidebar/src/: app_dock.c  app_dock.h  control_center.c  control_center.h  lyrics.c  lyrics.h  main.c  mpris.c  mpris.h  pinned.json  popout_panels.c  popout_panels.h  style-template.css  style.css  utils.c  utils.h
.config/hypr/python/: cheatsheet-template.css  cheatsheet.css  cheatsheet.py  cheatsheet.sh  keys.conf
.config/hypr/scripts/: cachy-selector.c  emoji.txt  emojiswofi.sh  float_center_resize.sh  greeting.sh  init.lua.bak  lighten_color.py  mpris-watcher.sh  nowplaying.sh  shortfortune.sh  startup.sh  toggle-ironbar.sh  volume_avizo.sh  wallpaper.sh  wofi-bootmenu.sh
.config/ironbar/: config.corn  style-wallust-generated.css  style.css  sysinfo.sh
.config/kitty/: colors-wallust.conf  kitty.conf  theme-wallust-generated.conf  welcome.sh
.config/qt5ct/: qt5ct.conf
.config/qt6ct/: qt6ct.conf  theme-wallust-generated.conf
.config/swaync/: config.json  style-base.css  style.css
.config/swaync/scripts/: collapse.sh  expand.sh  toggle_dnd.sh
.config/wallust/: wallust.toml
.config/wallust/templates/: dunst.tmpl  gtk.tmpl  hyprland.tmpl  kitty.tmpl  raw_colors.txt.tmpl  waybar.tmpl  wofi.tmpl
.config/waybar/: colors-wallust.css  config.jsonc  style.css
.config/wofi/: colors-wallust.css  config  style-base.css  style-wallust-generated.css  style.css  wofi-template.css
scripts/: applive.sh  audio.sh  autosprint.sh  clion-safe.sh  copytest.sh  glava_wofi.sh  gparted-wayland.sh  hydrate.sh  output.txt  remap-doubletap-w  runall.sh  sprint.sh  toggle-applauncher.sh  toggle-calendar.sh  toggle-control-center.sh  toggle-player.sh  toggle-schedule.sh  toggle-sidebar.sh  volume.sh  ytapp.sh
(+32 files in other folders)
